<resources>
    <string name="app_name">南宫燚滨卫士</string>
    <string name="hmgsdcx">号码归属地查询</string>
    <string name="qsrsjhm">请输入电话号码</string>
    <string name="cx">查询</string>
    <string name="tb">图标</string>
    <string name="ngybsjws">南宫燚滨手机卫士</string>
    <string name="sz">设置</string>
    <string name="spjm">锁屏界面</string>
    <string name="qsrmm">请输入密码</string>
    <string name="qd">确定</string>
    <string name="wjs">未加锁</string>
    <string name="yjs">已加锁</string>
    <string name="jcgl">进程管理</string>
    <string name="jcglsz">进程管理设置</string>
    <string name="xsxtjc">显示系统进程</string>
    <string name="spzdql">锁屏自动清理</string>
    <string name="qx">全选</string>
    <string name="fx">反选</string>
    <string name="szzx">设置中心</string>
    <string name="szzdgx">设置自动更新</string>
    <string name="gsdxssz">归属地显示设置</string>
    <string name="gsdxsfgsz">归属地显示风格设置</string>
    <string name="cygj">常用工具</string>
    <string name="dxbf">短信备份</string>
    <string name="dxhy">短信还原</string>
    <string name="cxs">程序锁</string>
    <string name="dzgfw">电子狗服务</string>
    <string name="sjsd">手机杀毒</string>
    <string name="sm">扫描</string>
    <string name="sjsfaq">手机是否安全</string>
    <string name="cxsm">重新扫描</string>
    <string name="sjwsbhsjaq">手机卫士保护手机安全</string>
    <string name="xz">卸载</string>
    <string name="dk">打开</string>
    <string name="xx">信息</string>
    <string name="fxiang">分享</string>
    <string name="ngybsjwsbhsjaqfzbddwh">南宫燚滨手机卫士，保护手机安全，防止病毒的危害http://www.nangongyibin.com/</string>
</resources>
